src/codegen/tests/snapshots/rusty__codegen__tests__code_gen_tests__basic_datatypes_generated.snap
---
source: src/codegen/tests/code_gen_tests.rs
expression: result

---
; ModuleID = 'main'
source_filename = "main"

@bool_1 = global i1 false
@byte_2 = global i8 0
@sint_3 = global i8 0
@usint_4 = global i8 0
@word_5 = global i16 0
@int_6 = global i16 0
@uint_7 = global i16 0
@dword_8 = global i32 0
@dint_9 = global i32 0
@udint_10 = global i32 0
@lword_11 = global i64 0
@lint_12 = global i64 0
@ulint_13 = global i64 0

