src/codegen/tests/snapshots/rusty__codegen__tests__code_gen_tests__casted_literals_bool_code_gen_test.snap
---
source: src/codegen/tests/code_gen_tests.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%prg = type { i8 }

@prg_instance = global %prg zeroinitializer

define void @prg(%prg* %0) {
entry:
  %z = getelementptr inbounds %prg, %prg* %0, i32 0, i32 0
  store i8 1, i8* %z, align [filtered]
  store i8 0, i8* %z, align [filtered]
  store i8 1, i8* %z, align [filtered]
  store i8 0, i8* %z, align [filtered]
  ret void
}
