src/codegen/tests/snapshots/rusty__codegen__tests__code_gen_tests__casted_literals_hex_code_gen_test.snap
---
source: src/codegen/tests/code_gen_tests.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%prg = type { i16, i16 }

@prg_instance = global %prg zeroinitializer

define void @prg(%prg* %0) {
entry:
  %x = getelementptr inbounds %prg, %prg* %0, i32 0, i32 0
  %z = getelementptr inbounds %prg, %prg* %0, i32 0, i32 1
  %load_x = load i16, i16* %x, align [filtered]
  %1 = sext i16 %load_x to i32
  %tmpVar = add i32 %1, 13
  %2 = trunc i32 %tmpVar to i16
  store i16 %2, i16* %z, align [filtered]
  ret void
}
