src/codegen/tests/snapshots/rusty__codegen__tests__code_gen_tests__empty_global_variable_list_generates_nothing.snap
---
source: src/codegen/tests/code_gen_tests.rs
expression: result

---
; ModuleID = 'main'
source_filename = "main"

%main_interface = type {}

@main_instance = global %main_interface zeroinitializer

define void @main(%main_interface* %0) {
entry:
  ret void
}

